<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
	xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 https://maven.apache.org/xsd/maven-4.0.0.xsd">
	<modelVersion>4.0.0</modelVersion>

	<parent>
		<groupId>org.springframework.boot</groupId>
		<artifactId>spring-boot-starter-parent</artifactId>
		<!-- Spring Boot 3.4.x : Spring Framework 6.2, Jakarta EE 10          -->
		<!-- Compatible avec SpringDoc 2.8, JJWT 0.11.5 et Lombok 1.18.x     -->
		<version>3.4.5</version>
		
		<relativePath/>
	</parent>

	<groupId>com.zizou</groupId>
	<artifactId>EcommerceAPI</artifactId>
	<version>0.0.1-SNAPSHOT</version>
	<name>EcommerceAPI</name>
	<description>Application de vente de livres en ligne</description>

	<properties>
		<java.version>21</java.version>
		<mapstruct.version>1.6.3</mapstruct.version>
	</properties>

	<dependencies>

		<!-- ── Base de données mysql (fichier local, développement) ──────────── -->
		<!-- Ajoutez ça -->
		<dependency>
		    <groupId>com.mysql</groupId>
		    <artifactId>mysql-connector-j</artifactId>
		    <scope>runtime</scope>
		</dependency>

		<!-- ── JPA / Hibernate ───────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-data-jpa</artifactId>
		</dependency>

		<!-- ── Spring Security ───────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-security</artifactId>
		</dependency>

		<!-- ── Spring Web MVC (REST) ─────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-web</artifactId>
		</dependency>

		<!-- ── JWT (JJWT 0.11.5 — API utilisée dans JwtService) ─────────── -->
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-api</artifactId>
			<version>0.11.5</version>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-impl</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>
		<dependency>
			<groupId>io.jsonwebtoken</groupId>
			<artifactId>jjwt-jackson</artifactId>
			<version>0.11.5</version>
			<scope>runtime</scope>
		</dependency>

		<!-- ── Lombok — version gérée par le BOM Spring Boot ────────────── -->
		<dependency>
			<groupId>org.projectlombok</groupId>
			<artifactId>lombok</artifactId>
			<optional>true</optional>
		</dependency>

		<!-- ── MapStruct ─────────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.mapstruct</groupId>
			<artifactId>mapstruct</artifactId>
			<version>${mapstruct.version}</version>
		</dependency>

		<!-- ── Swagger / OpenAPI (SpringDoc 2.8 — compatible Spring Boot 3.4) -->
		<dependency>
			<groupId>org.springdoc</groupId>
			<artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
			<version>2.8.0</version>
		</dependency>

		<!-- ── Tests ─────────────────────────────────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-starter-test</artifactId>
			<scope>test</scope>
		</dependency>
		<dependency>
			<groupId>org.springframework.security</groupId>
			<artifactId>spring-security-test</artifactId>
			<scope>test</scope>
		</dependency>

		<!-- ── DevTools (rechargement à chaud) ───────────────────────────── -->
		<dependency>
			<groupId>org.springframework.boot</groupId>
			<artifactId>spring-boot-devtools</artifactId>
			<scope>runtime</scope>
			<optional>true</optional>
		</dependency>

		<!-- ── Stripe Java SDK (paiement en ligne) ───────────────────────── -->
		<!-- Permet de créer des intentions de paiement, gérer les webhooks    -->
		<!-- et traiter les remboursements via l'API Stripe                    -->
		<dependency>
			<groupId>com.stripe</groupId>
			<artifactId>stripe-java</artifactId>
			<version>24.3.0</version>
		</dependency>

	</dependencies>

	<build>
		<plugins>

			<!-- Compilateur Java 21 + Lombok comme processeur d'annotations -->
			<plugin>
				<groupId>org.apache.maven.plugins</groupId>
				<artifactId>maven-compiler-plugin</artifactId>
				<configuration>
					<annotationProcessorPaths>
						<!-- Lombok DOIT précéder MapStruct pour générer les getters/setters d'abord -->
					<path>
						<groupId>org.projectlombok</groupId>
						<artifactId>lombok</artifactId>
						<!-- ${lombok.version} est défini par le BOM Spring Boot -->
						<version>${lombok.version}</version>
					</path>
					<path>
						<groupId>org.mapstruct</groupId>
						<artifactId>mapstruct-processor</artifactId>
						<version>${mapstruct.version}</version>
					</path>
				</annotationProcessorPaths>
				</configuration>
			</plugin>

			<!-- Package Spring Boot — Lombok exclu du JAR final -->
			<plugin>
				<groupId>org.springframework.boot</groupId>
				<artifactId>spring-boot-maven-plugin</artifactId>
				<configuration>
					<excludes>
						<exclude>
							<groupId>org.projectlombok</groupId>
							<artifactId>lombok</artifactId>
						</exclude>
					</excludes>
				</configuration>
			</plugin>

		</plugins>
	</build>

</project>
